# test-pyinstaller

./: .gitignore  CMakeLists.txt  README.md  bundle.ps1  qt-dir.spec  qt-onefile.spec  qt.py  qt.spec  requirements.txt  timer.py
Scripts/: config.ps1  dll.ps1
data/: func.py
ffmpeg/: .gitignore
init/: vcpkg.ps1
petool/: copydll.py
plugin/: print.cc
